# PC-Pi-chitchat-via-vsomeip

./: CMakeLists.txt  README.md  client-config.json  client_trial.cpp  service-config.json  service_trial.cpp
CLIENT_PC/: CMakeLists.txt
CLIENT_PC/inc/: client.hpp
CLIENT_PC/src/: client.cpp
SERVICE_PI/: CMakeLists.txt
SERVICE_PI/inc/: service.hpp
SERVICE_PI/src/: service.cpp
